# blockifier-tester

./: .gitattributes  .gitignore  Cargo.toml  README.md  bench.sh  config.toml  config.toml.example  envrc.example  push.sh
cache/: block_tx_counts
dump/: base.json  base_1.json  block-616498-Base.json  block-616498-Native.json  native.json  native_1.json  trace-613389-Base.json  trace-613436-base.json  trace-613436-native.json  trace-613480-base.json  trace-613480-native.json  trace-613505-base.json  trace-613505-native.json  trace-613616-base.json  trace-613616-native.json  trace-613734-base.json  trace-613734-native.json  trace-613743-base.json  trace-613743-native.json  trace-613746-base.json  trace-613746-native.json  trace-613883-base.json  trace-613883-native.json  trace-613901-base.json  trace-613901-native.json  trace-613963-base.json  trace-613963-native.json  trace-614009-base.json  trace-614009-native.json  trace-614126-base.json  trace-614126-native.json  trace-614153-base.json  trace-614153-native.json  trace-614157-base.json  trace-614157-native.json  trace-614174-base.json  trace-614174-native.json  trace-614197-base.json  trace-614197-native.json  trace-614348-base.json  (+122 more)
results/: .gitattributes  610026.json  610035.json  610077.json  610110.json  610198.json  610290.json  610492.json  610508.json  610519.json  610541.json  610723.json  610758.json  610783.json  610791.json  612392.json  612400.json  612409.json  612517.json  612575.json  612643.json  612653.json  (+472 more)
results-mainnet/: comparison-633333.json
results-sepolia/: comparison-1.json
(+64 files in other folders)
