[package]
name = "juno_compare_traces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command = "0.0.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
toml = "0.8.12"
anyhow = "1.0.83"
serde_json = "1.0.117"
regex = "1.10.4"
starknet = "0.10.0"
itertools = "0.13.0"
futures = "0.3.30"
chrono = "0.4.38"
num-bigint = "0.4.5"
petgraph = "0.6.5"
nix = { version = "0.29.0", features = ["signal"] }
glob = "0.3.1"
